[tool.poetry]
name = "bussaya"
version = "0.1.0"
description = ""
authors = ["Thanathip Limna <boatkrap@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
mongoengine = "^0.27.0"
email-validator = "^1.2.1"
Authlib = "^1.3.0"
Flask-Login = "^0.6.3"
humanize = "^4.2.3"
Flask-Caching = "^2.0.0"
Flask-WTF = "^1.2.1"
qrcode = "^7.3.1"
Markdown = "^3.4.1"
Pillow = "^10.4.0"
pandas = "^2.2.2"
XlsxWriter = "^3.0.3"
flask-me = "^1.0.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
bussaya-web = 'bussaya.cmd.web:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
